--- a/css/styles4.css
+++ b/css/styles4.css
@@ -87,12 +87,12 @@ footer {
     background-color: #000; 
     padding: 40px;
     text-align: center;
-    color: #fff; 
+    color: #000000; 
   }
   
   footer h2 {
     margin-bottom: 10px;
-    color: #fff; 
+    color: #000000; 
   }
   
   footer ul {
@@ -106,11 +106,11 @@ footer {
   }
   
   footer a {
-    color: #fff; 
+    color: #000000; 
   }
   
   footer a:hover {
-    color: #ccc; 
+    color: #000000; 
   }
   
   footer .social {
@@ -125,17 +125,17 @@ footer {
   
   footer .social i {
     font-size: 24px;
-    color: #fff; /* White */
+    color: #000000; /* White */
     transition: color 0.2s ease-in-out;
   }
   
   footer .social i:hover {
-    color: #ccc; 
+    color: #000000; 
   }
   
   footer .cta {
-    background-color: #fff; 
-    color: #000;
+    background-color: #000000; 
+    color: #ffffff;
     border: none;
     padding: 10px 20px;
     font-size: 18px;
@@ -143,7 +143,7 @@ footer {
   }
   
   footer .cta:hover {
-    background-color: #ccc;
+    background-color: #e5ff00;
   }
   
   @media only screen and (max-width: 1024px) {
